--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ServicePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ServicePropertiesDialog.form
@@ -196,7 +196,7 @@
                           <focusable value="true"/>
                           <opaque value="false"/>
                           <requestFocusEnabled value="true"/>
-                          <text value="&lt;html&gt;&#10;  &lt;head&gt;&#10;    &#10;  &lt;/head&gt;&#10;  &lt;body&gt;&#10;  &lt;/body&gt;&#10;&lt;/html&gt;&#10;"/>
+                          <text value="&lt;html&gt;&#10;  &lt;head&gt;&#10;&#10;  &lt;/head&gt;&#10;  &lt;body&gt;&#10;    &lt;p style=&quot;margin-top: 0&quot;&gt;&#10;      &#10;    &lt;/p&gt;&#10;  &lt;/body&gt;&#10;&lt;/html&gt;&#10;"/>
                           <verifyInputWhenFocusTarget value="false"/>
                         </properties>
                       </component>
@@ -341,7 +341,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties/>
-                    <border type="none" title="Related UDDI Business Service"/>
+                    <border type="none" title="Original UDDI Business Service"/>
                     <children>
                       <component id="b0908" class="javax.swing.JLabel" binding="uddiRegistryLabel">
                         <constraints>
