--- a/modules/gui/src/main/java/com/l7tech/gui/widgets/resources/OkCancelDialog.form
+++ b/modules/gui/src/main/java/com/l7tech/gui/widgets/resources/OkCancelDialog.form
@@ -1,30 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.gui.widgets.OkCancelDialog">
-  <grid id="d4109" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="d4109" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="12" left="12" bottom="12" right="12"/>
     <constraints>
-      <xy x="109" y="246" width="552" height="124"/>
+      <xy x="109" y="246" width="743" height="124"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <vspacer id="bbf6">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="12"/>
-          </grid>
-        </constraints>
-      </vspacer>
-      <vspacer id="d4392">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="12"/>
-          </grid>
-        </constraints>
-      </vspacer>
       <grid id="c1fe7" binding="innerPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -33,7 +19,7 @@
       <grid id="bad87" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -45,7 +31,7 @@
               </grid>
             </constraints>
             <properties>
-              <text resource-bundle="com/l7tech/console/panels/CertificateImportDialog" key="button.ok"/>
+              <text value="Ok"/>
             </properties>
           </component>
           <component id="c4512" class="javax.swing.JButton" binding="cancelButton">
@@ -60,23 +46,9 @@
           </component>
         </children>
       </grid>
-      <hspacer id="1c634">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="12" height="-1"/>
-          </grid>
-        </constraints>
-      </hspacer>
-      <hspacer id="23d4e">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="12" height="-1"/>
-          </grid>
-        </constraints>
-      </hspacer>
       <vspacer id="c8509">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
     </children>
