--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SearchUddiDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SearchUddiDialog.form
@@ -73,7 +73,7 @@
               <grid id="20ad2" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -95,6 +95,14 @@
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="2d590" class="javax.swing.JCheckBox" binding="allowWildcardsCheckBox" default-binding="true">
+                <constraints>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Allow Wildcards"/>
+                </properties>
               </component>
             </children>
           </grid>
