--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/UddiRegistryPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/UddiRegistryPropertiesDialog.form
@@ -45,12 +45,12 @@
                   <text value="Cancel"/>
                 </properties>
               </component>
-              <component id="3dc0" class="javax.swing.JButton" binding="testUDDIConnectionButton" default-binding="true">
+              <component id="3dc0" class="javax.swing.JButton" binding="testUDDIRegistryButton">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Test UDDI Connection"/>
+                  <text value="Test UDDI Registry Settings"/>
                 </properties>
               </component>
             </children>
