SSM-2546: Fixed by changing [Ok] to [OK] in the policy properties dialog and the Compare Expression assertion rule dialog.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25127 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gui/src/main/java/com/l7tech/gui/widgets/resources/OkCancelDialog.form
+++ b/modules/gui/src/main/java/com/l7tech/gui/widgets/resources/OkCancelDialog.form
@@ -31,7 +31,7 @@
               </grid>
             </constraints>
             <properties>
-              <text value="Ok"/>
+              <text value="OK"/>
             </properties>
           </component>
           <component id="c4512" class="javax.swing.JButton" binding="cancelButton">
