bug 7407: Added new checkbox "Use Keepalive" to the HTTP routing properties Request HTTP Rules tab that can be unchecked to disable keepalives on a per-routing-assertion basis.  The checkbox is respected by the HTTP Routing assertion and the Bridge Routing assertion.
If the cluster property io.httpDisableKeepAlive is set, it will take precedence over the per-assertion checkboxes.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25135 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingAssertionDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/HttpRoutingAssertionDialog.form
@@ -531,7 +531,7 @@
                   </grid>
                 </children>
               </grid>
-              <grid id="1cc68" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="1cc68" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -559,6 +559,15 @@
                     </constraints>
                     <properties>
                       <text value="Compress output"/>
+                    </properties>
+                  </component>
+                  <component id="c7379" class="javax.swing.JCheckBox" binding="useKeepalivesCheckBox">
+                    <constraints>
+                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Use Keepalive"/>
+                      <toolTipText value="Enable HTTP keepalive for this connection, to improve routing performance."/>
                     </properties>
                   </component>
                 </children>
