SSM-2558: fixed typo
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25175 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SearchUddiDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SearchUddiDialog.form
@@ -154,7 +154,7 @@
             </constraints>
             <properties>
               <text value="Retrieve WSDL URL in search results"/>
-              <toolTipText value="Not retrieving the WSDL URL in the results improvies search performance on some UDDI Registries. WSDL URL will be downloaded when selection is made"/>
+              <toolTipText value="Not retrieving the WSDL URL in the results improves search performance on some UDDI Registries. WSDL URL will be downloaded when selection is made"/>
             </properties>
           </component>
           <hspacer id="75ab8">
