--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SearchUddiDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SearchUddiDialog.form
@@ -70,7 +70,7 @@
                   <model/>
                 </properties>
               </component>
-              <grid id="20ad2" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="20ad2" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -80,10 +80,19 @@
                 <children>
                   <component id="a5b27" class="javax.swing.JButton" binding="searchButton">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Search"/>
+                    </properties>
+                  </component>
+                  <component id="3ca35" class="javax.swing.JCheckBox" binding="retrieveWSDLURLCheckBox" default-binding="true">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Retrieve WSDL URL in search results"/>
+                      <toolTipText value=""/>
                     </properties>
                   </component>
                 </children>
@@ -145,16 +154,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Show select wsdl:port dialog"/>
-            </properties>
-          </component>
-          <component id="3ca35" class="javax.swing.JCheckBox" binding="retrieveWSDLURLCheckBox" default-binding="true">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Retrieve WSDL URL in search results"/>
-              <toolTipText value="Not retrieving the WSDL URL in the results improves search performance on some UDDI Registries. WSDL URL will be downloaded when selection is made"/>
+              <text value="Show select wsdl:port dialog (puts the WSDL under UDDI control)"/>
             </properties>
           </component>
           <hspacer id="75ab8">
