SSM-2574: fixed by not enabling the under uddi control and related controls on the UDDI tab when the original service has had either a bindingTemplate added to it or it has been overwritten. Enforced in both UI and admin apis. Updated all publishing tasks to reduce the time they hold references to entities. When an entity which must be updated in a UDDI background task is updated, it is read immediately before hand to reduce the possibility of a stale object exceptoin from hibernate. Added todo items to UDDIProxiedServicInfo and UDDIServiceControl to refactor out the configuration from the runtime info
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@25201 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/ServiceUDDISettingsDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/ServiceUDDISettingsDialog.form
@@ -6,7 +6,8 @@
       <xy x="48" y="54" width="952" height="477"/>
     </constraints>
     <properties>
-      <preferredSize width="660" height="400"/>
+      <minimumSize width="700" height="440"/>
+      <preferredSize width="700" height="440"/>
     </properties>
     <border type="none"/>
     <children>
