--- a/modules/gateway/assertions/templates/ivy.xml
+++ b/modules/gateway/assertions/templates/ivy.xml
@@ -31,5 +31,9 @@
         <dependency org="com.intellij" name="forms_rt" rev="7.0.1" force="true" conf="optional"/>
         <dependency org="org.springframework" name="spring-test" rev="2.5.6" force="true" conf="test"/>
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
+
+        <exclude org="asm" module="asm" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+        <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+        <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
     </dependencies>
 </ivy-module>
