--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XmlSecurityProperties.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XmlSecurityProperties.form
@@ -3,7 +3,7 @@
   <grid id="24f2b" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="10" bottom="0" right="10"/>
     <constraints>
-      <xy x="46" y="21" width="1142" height="833"/>
+      <xy x="46" y="21" width="1142" height="878"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -295,7 +295,7 @@
               <text value="Edit Namespaces"/>
             </properties>
           </component>
-          <grid id="8c03f" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="8c03f" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="3" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -412,6 +412,30 @@
                     </constraints>
                     <properties>
                       <text value="Issuer Name / Serial Number"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
+              <grid id="c694" binding="signatureDigestAlgorithmPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none" title="Signature Digest Algorithm"/>
+                <children>
+                  <component id="6ae85" class="javax.swing.JComboBox" binding="signatureDigestComboBox">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <model>
+                        <item value="Automatic"/>
+                        <item value="SHA-1"/>
+                        <item value="SHA-256"/>
+                        <item value="SHA-384"/>
+                        <item value="SHA-512"/>
+                      </model>
                     </properties>
                   </component>
                 </children>
