--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XmlSecurityProperties.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XmlSecurityProperties.form
@@ -429,13 +429,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <model>
-                        <item value="Automatic"/>
-                        <item value="SHA-1"/>
-                        <item value="SHA-256"/>
-                        <item value="SHA-384"/>
-                        <item value="SHA-512"/>
-                      </model>
+                      <model/>
                     </properties>
                   </component>
                 </children>
